# markterm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Show-Markdown.ps1  Show-Markdown.psm1  example.md  pyproject.toml  requirements.txt  show_rendered_markdown.py
.github/workflows/: ci.yml
markterm/: __init__.py  __main__.py  app.js  cli.py  styles.css  template.html
tests/: __init__.py  conftest.py  test_cli.py  test_main.py
tests/fixtures/: simple.md
