[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markterm"
version = "0.1.0"
description = "Render markdown in a terminal or browser preview."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-it-py>=4.0.0",
    "Pygments>=2.18.0",
    "rich>=14.0.0",
]

[project.scripts]
markterm = "markterm.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
markterm = ["template.html"]
